--- a/JQueryDataTables/packages.config
+++ b/JQueryDataTables/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="4.1.1" targetFramework="net471" />
+  <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net471" />
+  <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net471" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net471" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net471" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
 </packages>
